--- a/web-admin-client/src/App.css
+++ b/web-admin-client/src/App.css
@@ -51,7 +51,11 @@
   overflow-y: auto;
 }
 
-
+.main-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 
 .sidebar {
   width: 240px;
@@ -59,6 +63,9 @@
   color: white;
   padding: 30px 20px;
   height: 100vh;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar-title {
@@ -82,6 +89,22 @@
   background-color: #3b82f6;
 }
 
+.logout-btn {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background-color: #e74c3c;
+  color: white;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: auto;
+  transition: background 0.3s;
+}
+
+.logout-btn:hover {
+  background-color: #c0392b;
+}
 
 /* ✅ src/pages/Dashboard.css */
 .dashboard-content {
