--- a/web-admin-client/src/styles/requests.css
+++ b/web-admin-client/src/styles/requests.css
@@ -133,3 +133,46 @@
     font-weight: bold;
     cursor: pointer;
   }
+
+
+  .input-text,
+  .dropdown-text {
+    width: 100%;
+    min-height: 44px;
+    padding: 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    background-color: #fff;
+    appearance: none;
+    box-sizing: border-box;
+    margin-bottom: 3px;
+  }
+  
+  .select__control {
+    padding: 6px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    min-height: 42px;
+    box-shadow: none;
+  }
+  
+  .select__value-container {
+    padding: 2px 8px;
+  }
+  
+  .select__multi-value {
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    padding: 2px 6px;
+    margin-right: 4px;
+  }
+  
+  .select__multi-value__label {
+    font-size: 13px;
+  }
+  
+  .select__multi-value__remove {
+    cursor: pointer;
+  }
